--- a/book-service-dev.properties
+++ b/book-service-dev.properties
@@ -1,13 +1,13 @@
 #info.app.name = Store App
 #info.app.description = My Product Service
 #info.app.version = 1.0.0
-server.port=8081
+#server.port=8081
 management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:h2:mem:micro
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
-spring.datasource.password=Deeksha@12345
+spring.datasource.password=suvashree#1234
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #accessing the H2 console
@@ -18,3 +18,4 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+ "application.theme.color"="dark"
