--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -7,10 +7,13 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:micro?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Deeksha@12345
+spring.datasource.password=suvashree#1234
 spring.jpa.database-platform=org.hibernate.dialect.MYSQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.connection-timeout=60000
+ "application.theme.color"="dark"
