--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -7,7 +7,7 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:h2:mem:micro?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=suvashree#1234
+spring.datasource.password=Deeksha@12345
 spring.jpa.database-platform=org.hibernate.dialect.MYSQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=create-drop
